--- a/React 101/project 9 - store/client/src/app.scss
+++ b/React 101/project 9 - store/client/src/app.scss
@@ -1,3 +1,5 @@
+@import "./features/user/user.scss";
+@import "./features/admin/admin.scss";
 .App {
   text-align: center;
 }
@@ -34,5 +36,27 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+body{
+  background-color: #bde1ea;
+}
+button{
+  border: none;
+  margin: 2vw;
+    width: 15vw;
+    height: 6vh;
+    border-radius: 20px;
+}
+button:hover{
+  background-color: #61dafb;
+}
+.productCard{
+  display: flex;
+  width: 320px;
+  justify-content: space-between;
+  padding: 25px;
+  img{
+    width: 20vw;
   }
 }
